added edit button functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <input type="number" name="gpa" id="gpa" placeholder="GPA" required>
         <input type="number" name="age" id="age" placeholder="Age" required>
         <input type="text" name="degree" id="degree" placeholder="Degree" required>
-        <input type="submit" value="Add Student">
+        <input type="submit" value="Add Student" id="add-student-btn">
+        <input type="submit" value="Edit Student" id="edit-student-btn">
         <!-- <button type="submit">Add Student</button> -->
     </form>
     </div>
