added search functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="heading"><h1>Student Management CRUD</h1></div>
+    <!-- form section -->
     <div id="form-section">
         <form action="" id="my-form">
         <input type="text" name="name" id="name" placeholder="Name" required>
@@ -20,9 +21,13 @@
         <!-- <button type="submit">Add Student</button> -->
     </form>
     </div>
+
+    <!-- search bar -->
     <div id="search-bar">
         <input type="text" name="search" id="search" placeholder="Search by Name, Email or Degree">
     </div>
+
+<!-- student table details section -->
     <div id="student-details">
         <table>
             <thead id="thead">
@@ -55,6 +60,7 @@
             </tbody>
         </table>
     </div>
+    
     <script src="./index.js"></script>
 </body>
 </html>
