--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <form action="" id="my-form">
         <input type="text" name="name" id="name" placeholder="Name" required>
         <input type="email" name="email" id="email" placeholder="Email" required>
-        <input type="number" name="gpa" id="gpa" placeholder="GPA" required>
+        <input type="number" name="gpa" id="gpa" placeholder="GPA" step="0.01" required>
         <input type="number" name="age" id="age" placeholder="Age" required>
         <input type="text" name="degree" id="degree" placeholder="Degree" required>
-        <input type="submit" value="Add Student" id="add-student-btn">
-        <input type="submit" value="Edit Student" id="edit-student-btn">
+        <div id="btn">
+            <input type="submit" value="Add Student" id="add-student-btn">
+            <input type="submit" value="Edit Student" id="edit-student-btn">
+        </div>
         <!-- <button type="submit">Add Student</button> -->
     </form>
     </div>
@@ -41,14 +43,22 @@
                 </tr>
             </thead>
             <tbody id="table-body">
-                     <tr>
+                <tr >
+                    <td class="table-body-row"></td>
+                    <td class="table-body-row"></td>
+                    <td class="table-body-row"></td>
+                    <td class="table-body-row"></td>
+                    <td class="table-body-row"></td>
+                    <td class="table-body-row"></td>
+                </tr>
+                     <!-- <tr>
                         <td>akc</td>
                         <td>akc</td>
                         <td>akc</td>
                         <td>akc</td>
                         <td>akc</td>
                         <td>akc <button id="edit-btn"></button> <button id="trash-btn"></button></td>
-                    </tr>
+                    </tr> -->
                     <!-- <tr>
                         <td>akc</td>
                         <td>akc</td>
@@ -60,7 +70,7 @@
             </tbody>
         </table>
     </div>
-    
+
     <script src="./index.js"></script>
 </body>
 </html>
