added major styling for input and table

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!-- form section -->
     <div id="form-section">
         <form action="" id="my-form">
-        <input type="text" name="name" id="name" placeholder="Name" required>
-        <input type="email" name="email" id="email" placeholder="Email" required>
-        <input type="number" name="gpa" id="gpa" placeholder="GPA" step="0.01" required>
-        <input type="number" name="age" id="age" placeholder="Age" required>
-        <input type="text" name="degree" id="degree" placeholder="Degree" required>
+        <input type="text" name="name" class="gradient" id="name" placeholder="Name" required>
+        <input type="email" name="email" class="gradient" id="email" placeholder="Email" required>
+        <input type="number" name="gpa" class="gradient" id="gpa" placeholder="GPA" step="0.01" required>
+        <input type="number" name="age" class="gradient" id="age" placeholder="Age" required>
+        <input type="text" name="degree" class="gradient" id="degree" placeholder="Degree" required>
         <div id="btn">
             <input type="submit" value="Add Student" id="add-student-btn">
             <input type="submit" value="Edit Student" id="edit-student-btn">
